feat: Added support for OpenMP in Simulator
- Updated CMakeLists to include OpenMP in RELEASE mode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,11 @@ elseif(CMAKE_BUILD_TYPE STREQUAL "RELEASE")
 	message("Build type: RELEASE")
 	add_definitions(-DRELEASE)
 	add_compile_options(-O3 -march=native -DNDEBUG)
+	find_package(OpenMP REQUIRED)
+	if(OpenMP_CXX_FOUND)
+		add_compile_options(${OpenMP_CXX_FLAGS})
+		link_libraries(${OpenMP_CXX_LIBRARIES})
+	endif()
 endif()
 
 file(GLOB SOURCES "src/*.cpp")
